--- a/style.scss
+++ b/style.scss
@@ -3,3 +3,5 @@
 @import "./style/header";
 @import "./style/marquee";
 @import "./style/main";
+@import "./style/stages";
+@import "./style/players";
