--- a/style/_main.scss
+++ b/style/_main.scss
@@ -1,9 +1,7 @@
 .main{
     padding: 80px 0;
 
-    &-container{
-        padding: 0 45px;
-    }
+    
 
     &-all{
         display: flex;
@@ -64,6 +62,10 @@
         &_img{
             display: none;
         }
+    }
+
+    &-container{
+        padding: 0 72px;
     }
 }
 .session{
@@ -308,6 +310,12 @@
     }
 }
 
+@media screen and (max-width:750px){
+    .main-container{
+        padding: 0 40px;
+    }
+}
+
 @media screen and (max-width:700px){
     .main{
         &__mobile{
@@ -319,6 +327,12 @@
                 margin-top: 0;
             }
         }
+    }
+}
+
+@media screen and (max-width:520px){
+    .main-container{
+        padding: 0 20px;
     }
 }
 
@@ -336,6 +350,7 @@
                 margin-top: 0;
                 width: 100%;
                 margin: 0 auto;
+                height: auto;
             }
 
             &_h2{
@@ -393,5 +408,40 @@
 
     .table{
         display: none;
+    }
+}
+
+@media screen and ( max-width:360px){
+    .main{
+        &__title{
+            &_img{
+                display: none;
+            }
+
+            &_h2{
+                font-size: 22px;
+
+                &-span{
+                    font-size: 22px;
+                }
+            }
+
+            &-mobile{
+                &_h2{
+                    font-size: 22px;
+                }
+            }
+        }
+    }
+
+    .session{
+        &__info{
+            &_text{
+                font-size: 22px;
+                &-span{
+                    font-size: 22px;
+                }
+            }
+        }
     }
 }
