--- a/style/_players.scss
+++ b/style/_players.scss
@@ -79,6 +79,7 @@
                     font-style: normal;
                     font-weight: 400;
                     line-height: 120%;
+                    opacity: 0.6;
                 }
                 &3{
                     color: #313131;
@@ -90,6 +91,7 @@
                     font-style: normal;
                     font-weight: 400;
                     line-height: 120%;
+                    opacity: 0.6;
                 }
             }
         }
@@ -197,13 +199,21 @@
 
 @media screen and (max-width:1000px){
     .players{
-        padding: 80px 0 700px 0;
+        padding: 80px 0 70px 0;
 
         &__title{
             &_h2{
                 font-size: 40px;
             }
         }
+    }
+}
+@media screen and (max-width:750px){
+    .players-container{
+        padding: 0 40px;
+    }
+    .players-articles{
+        padding: 0 40px;
     }
 }
 @media screen and (max-width:700px){
@@ -271,5 +281,11 @@
                 font-size: 20px;
             }
         }
+    }
+}
+
+@media screen and (max-width:360px){
+    .players__title_h2{
+        font-size: 30px;
     }
 }
