--- a/style/_stages.scss
+++ b/style/_stages.scss
@@ -6,6 +6,7 @@
     &__title{
         display: flex;
         flex-direction: column;
+        margin-bottom: 54px;
         &_h2{
             color: #313131;
             font-variant-numeric: lining-nums proportional-nums;
@@ -42,5 +43,311 @@
                 margin: 5px 0 0 20px;
             }
         }
+
+        &_mobile{
+            display: none;
+            flex-direction: column;
+            gap: 12px;
+
+            &-h2{
+                color: #313131;
+                font-variant-numeric: lining-nums proportional-nums;
+                font-family: "Merriweather";
+                font-size: 36px;
+                font-style: normal;
+                font-weight: 400;
+                line-height: 110%;
+                text-transform: uppercase;
+            }
+            &-text{
+                color: #3057A2;
+                font-variant-numeric: lining-nums proportional-nums;
+                font-family: "Golos Text";
+                font-size: 18px;
+                font-style: normal;
+                font-weight: 400;
+                line-height: 120%;
+            }
+        }
     }
+
+    &-articles{
+        display: grid;
+        grid-template-columns: repeat(auto-fill, minmax(290px, 1fr));
+        gap: 20px;
+
+        &__mobile{
+            gap: 20px;
+            display: none;
+            grid-template-columns: repeat(auto-fill, minmax(335px, 1fr));
+            padding: 0 72px;
+
+            &_1a2{
+                padding: 62px 20px 34px 20px;
+                background-color: #E9DED4;
+                display: flex;
+                flex-direction: column;
+                gap: 28px;
+                // width: 335px;
+                height: 300px;
+            }
+
+            &_4a5{
+                padding: 62px 20px 34px 20px;
+                background-color: #E9DED4;
+                display: flex;
+                flex-direction: column;
+                gap: 28px;
+                // width: 335px;
+                height: 300px;
+            }
+
+            
+        }
+    }
+
+    &-article{
+        display: flex;
+        padding: 20px;
+        opacity: 0.8;
+        // box-shadow: 5px 4px 12.7px 0px rgba(0, 0, 0, 0.25);
+        // height: 112px;
+        background-color: #E9DED4;
+        gap: 16px;
+
+        &__div{
+            width: 36px;
+            height: 36px;
+            border-radius: 50%;
+            background-color: #fff;
+            flex: 36px 0 0;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            &_number{
+                color: #313131;
+                leading-trim: both;
+                text-edge: cap;
+                font-variant-numeric: lining-nums proportional-nums;
+                font-family: "Golos Text";
+                font-size: 20px;
+                font-style: normal;
+                font-weight: 600;
+                line-height: 120%;
+            }
+        }
+
+        &__text{
+            color: #313131;
+            font-variant-numeric: lining-nums proportional-nums;
+            font-family: "Golos Text";
+            font-size: 20px;
+            font-style: normal;
+            font-weight: 500;
+            line-height: 120%; 
+            max-width: 403px;
+            width: 100%;
+        }
+
+        &__img{
+            position: absolute;
+            bottom: 21px;
+            right: -70px;
+        }
+
+        // &__mobile{
+        //     width: 335px;
+        //     height: 300px;
+        //     background-color: #E9DED4;
+        // }
+
+        &:nth-child(3){
+            grid-column: 3/3;
+            grid-row: 1/3;
+        }
+        &:nth-child(7){
+            grid-column: 2/4;
+            grid-row: 3/3;
+            position: relative;
+        }
+
+        &__mobile{
+            display: flex;
+            gap: 16px;
+
+            &_text{
+                color: #313131;
+                font-variant-numeric: lining-nums proportional-nums;
+                font-family: "Golos Text";
+                font-size: 18px;
+                font-style: normal;
+                font-weight: 500;
+                line-height: 120%;
+            }
+
+            &_3{
+                // width: 335px;
+                height: 300px;
+                padding: 62px 20px 34px 20px;
+                background-color: #E9DED4;
+                display: flex;
+                gap: 16px;
+            }
+            &_4{
+                // width: 335px;
+                // height: 300px;
+                // padding: 62px 20px 34px 20px;
+                background-color: #E9DED4;
+                display: flex;
+                gap: 16px;
+            }
+            &_5{
+                // width: 335px;
+                // height: 300px;
+                // padding: 62px 20px 34px 20px;
+                background-color: #E9DED4;
+                display: flex;
+                gap: 16px;
+            }
+            &_6{
+                // width: 335px;
+                height: 300px;
+                padding: 62px 20px 34px 20px;
+                background-color: #E9DED4;
+                display: flex;
+                gap: 16px;
+            }
+            &_7{
+                // width: 335px;
+                height: 300px;
+                padding: 62px 20px 34px 20px;
+                background-color: #E9DED4;
+                display: flex;
+                gap: 16px;
+            }
+
+        }
+    }
+}
+
+@media screen and (max-width:1323px){
+    .stages{
+        &-article{
+            &:nth-child(7){
+                .stages-article__text{
+                    max-width: 250px;
+                    width: 100%;
+                }
+            } 
+        }
+    }
+}
+
+@media screen and (max-width:1100px){
+    .stages{
+        &-articles{
+            display: none;
+            &__mobile{
+                display: grid;
+            }
+        }
+
+        &-article{
+            &__img{
+                display: none;
+            }
+        }
+
+        &__title{
+
+        }
+    }
+}
+
+@media screen and (max-width:1000px){
+    .stages{
+        &__title{
+            display: none;
+            &_mobile{
+                display: flex;
+                margin-bottom: 40px;
+            }
+        }
+    }
+}
+
+@media screen and (max-width:833px){
+    .stages{
+        &-articles{
+            &__mobile{
+                display: flex;
+                overflow: scroll;
+                flex: 335 0 0;
+
+                &_1a2{
+                    width: 335px;
+                    height: 300px;
+                    flex: 0 0 335px;
+                }
+                &_4a5{
+                    width: 335px;
+                    height: 300px;
+                    flex: 0 0 335px;
+                }
+
+                &::-webkit-scrollbar{
+                    width: 0;
+                    height: 0;
+                }
+
+                &:nth-child(5){
+                    grid-column: 1/1;
+                    grid-row: 1/3;
+                }
+            }
+        }
+
+        &-article{
+            &__mobile{
+                &_3{
+                    width: 335px;
+                    height: 300px;
+                    flex: 0 0 335px;
+                }
+                &_6{
+                    width: 335px;
+                    height: 300px;
+                    flex: 0 0 335px;
+                }
+                &_7{
+                    width: 335px;
+                    height: 300px;
+                    flex: 0 0 335px;
+                }
+
+                
+            }
+        }
+    }
+}
+
+@media screen and (max-width:750px){
+    .stages-container{
+        padding: 0 40px;
+    }
+
+    .stages-articles__mobile{
+        padding: 0 40px;
+    }
+}
+
+@media screen and (max-width:520px){
+    .stages-container{
+        padding: 0 20px;
+    }
+
+    .stages-articles__mobile{
+        padding: 0 20px;
+    }
+
 }
