--- a/style.scss
+++ b/style.scss
@@ -1,4 +1,5 @@
 @import "./style/general";
+@import "./style/reset";
 @import "./style/buttons";
 @import "./style/header";
 @import "./style/marquee";
