--- a/style/_players.scss
+++ b/style/_players.scss
@@ -199,7 +199,7 @@
 
 @media screen and (max-width:1000px){
     .players{
-        padding: 80px 0 70px 0;
+        padding: 80px 0 100px 0;
 
         &__title{
             &_h2{
@@ -218,7 +218,7 @@
 }
 @media screen and (max-width:700px){
     .players{
-        padding: 30px 0 40px 0;
+        padding: 30px 0 100px 0;
         &-container{
             padding: 0 45px;
         }
@@ -235,6 +235,10 @@
             padding: 0 20px;
         }
         &__title{
+            margin-bottom: 40px;
+            &_h2{
+                font-size: 36px;
+            }
             &_buttons{
                 display: none;
             }
