--- a/style/_stages.scss
+++ b/style/_stages.scss
@@ -3,6 +3,42 @@
     &-all{
 
     }
+
+    &-button{
+        border: none;
+        border-radius: 50%;
+        circle{
+            transition: 0.5s;
+        }
+
+        :hover{
+            circle{
+                fill: #FBCE51;
+            }
+        }
+    }
+
+    &-buttons{
+        display: none;
+        width: 178px;
+        height: 37px;
+        margin: 0 auto;
+        
+        flex-direction: column;
+        gap: 16px;
+        flex-wrap: wrap;
+        margin-top: 28px;
+        justify-content: center;
+
+        &__nav{
+            display: flex;
+            gap: 6px;
+            justify-content: center;
+            align-items: center;
+        }
+    }
+
+
     &__title{
         display: flex;
         flex-direction: column;
@@ -73,7 +109,7 @@
 
     &-articles{
         display: grid;
-        grid-template-columns: repeat(auto-fill, minmax(290px, 1fr));
+        grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
         gap: 20px;
 
         &__mobile{
@@ -81,6 +117,7 @@
             display: none;
             grid-template-columns: repeat(auto-fill, minmax(335px, 1fr));
             padding: 0 72px;
+            position: relative;
 
             &_1a2{
                 padding: 62px 20px 34px 20px;
@@ -90,6 +127,7 @@
                 gap: 28px;
                 // width: 335px;
                 height: 300px;
+                
             }
 
             &_4a5{
@@ -114,6 +152,7 @@
         // height: 112px;
         background-color: #E9DED4;
         gap: 16px;
+        background-image: url(./image23.png);
 
         &__div{
             width: 36px;
@@ -224,6 +263,21 @@
                 background-color: #E9DED4;
                 display: flex;
                 gap: 16px;
+                position: relative;
+            }
+
+            &_img-7{
+                display: none;
+                position: absolute;
+                bottom: 20px;
+                right: -30px;
+            }
+
+            &_img-1{
+                display: none;
+                position: absolute;
+                top: -10px;
+                left: 100px;
             }
 
         }
@@ -253,6 +307,22 @@
         }
 
         &-article{
+            &__mobile{
+                &_7{
+                    grid-column: 1/3;
+                    grid-row: 3/3;
+                }
+
+                &_text-7{
+                    max-width: 400px;
+                    width: 100%;
+                }
+
+                &_img-7{
+                    display: block;
+                }
+            }
+
             &__img{
                 display: none;
             }
@@ -276,13 +346,36 @@
     }
 }
 
+@media screen and (max-width:920px){
+    .stages{
+        &-article{
+            &__mobile{
+                &_text-7{
+                    max-width: 100%;
+
+                }
+
+                &_img-7{
+                    left: 100px;
+                    bottom: -50px;
+                }
+            }
+        }
+    }
+}
+
 @media screen and (max-width:833px){
     .stages{
+
+        &__title_mobile{
+            // margin-bottom: 148px;
+        }
         &-articles{
             &__mobile{
                 display: flex;
                 overflow: scroll;
                 flex: 335 0 0;
+                padding-top: 148px;
 
                 &_1a2{
                     width: 335px;
@@ -304,6 +397,8 @@
                     grid-column: 1/1;
                     grid-row: 1/3;
                 }
+
+                
             }
         }
 
@@ -325,19 +420,32 @@
                     flex: 0 0 335px;
                 }
 
-                
+                &_img-7{
+                    display: none;
+                }
+                &_img-1{
+                    display: block;
+                }
             }
         }
     }
 }
 
 @media screen and (max-width:750px){
-    .stages-container{
+    .stages{
+        padding: 85px 0 90px 0;
+        &-container{
         padding: 0 40px;
+        }
     }
 
     .stages-articles__mobile{
         padding: 0 40px;
+        padding-top: 148px;
+    }
+
+    .stages-article__mobile_img-1{
+        left: 70px;
     }
 }
 
@@ -348,6 +456,26 @@
 
     .stages-articles__mobile{
         padding: 0 20px;
+        padding-top: 148px;
+    }
+    .stages-article__mobile_img-1{
+        left: 40px;
+        width: 335px;
+        top: 20px;
+    }
+    .stages__title_mobile-h2{
+        font-size: 36px;
     }
 
+}
+
+@media screen and (max-width:375px){
+    .stages-buttons{
+        display: flex;
+    }
+}
+@media screen and (max-width:360px){
+    .stages__title_mobile-h2{
+        font-size: 30px;
+    }
 }
